# cpp-parquet

./: .gitignore  CMakeLists.txt  README.md  adam.json  avro-schema-walker.cc  avro-schema-walker.h  parquet-column.cc  parquet-column.h  parquet-file-driver.cc  parquet-file-writer.cc  parquet-file.cc  parquet-file.h  pom.xml  simple.json
avro/: avro-schema-walker.cc  avro-schema-walker.h
avro-schema/: CMakeLists.txt  avro-parquet-encoder  avro-parquet-encoder.cc  avro-parquet-encoder.h  avro-schema-walker.cc  avro-schema-walker.h
cmake/Modules/: FindThrift.cmake  GoogleGlogCMakeLists.cmake  GoogleTestCMakeLists.cmake  ParquetFormatCMakeLists.cmake  SnappyCMakeLists.cmake
cpp-parquet-cli/: pom.xml
cpp-parquet-cli/src/main/c++/: parquet-file-driver.cc
cpp-parquet-lib/: pom.xml
cpp-parquet-lib/src/main/include/: parquet-file.h
examples/: AlignmentRecord.avsc  CMakeLists.txt  Root0.avsc  adam.avpr  adam.json  avro-schema-walker-example.cc  nested.avdl  parquet-file-driver.cc  parquet-file-writer.cc
parquet-file/: CMakeLists.txt  parquet-column-page.cc  parquet-column-page.h  parquet-column.cc  parquet-column.h  parquet-file-test.cc  parquet-file.cc  parquet-file.h
parquet-file/util/: bit-stream-utils.h  bit-stream-utils.inline.h  rle-encoding.h
parquet-types/: parquet-type.h
